exports[`no-unneeded-async-rejects-callback > invalid(1): import assert from 'node:assert';\nassert.rejects(async () => await operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(1): import assert from 'node:assert';\nassert.rejects(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(10): import * as assert from 'node:assert';\nassert.strict.rejects(async () => await operation()); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.strict.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(10): import * as assert from 'node:assert';\nassert.strict.rejects(async () => await operation()); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.strict.rejects(async () => await operation());
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import * as assert from 'node:assert';
  2 | assert.strict.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(11): import {rejects} from 'node:assert';\nrejects(async () => await operation()); 1`] = `

  1 | import {rejects} from 'node:assert';
  2 | rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(11): import {rejects} from 'node:assert';\nrejects(async () => await operation()); 2`] = `

Message:
  1 | import {rejects} from 'node:assert';
> 2 | rejects(async () => await operation());
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {rejects} from 'node:assert';
  2 | rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(12): import {rejects as assertRejects} from 'node:assert';\nassertRejects(async () => await operation()); 1`] = `

  1 | import {rejects as assertRejects} from 'node:assert';
  2 | assertRejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(12): import {rejects as assertRejects} from 'node:assert';\nassertRejects(async () => await operation()); 2`] = `

Message:
  1 | import {rejects as assertRejects} from 'node:assert';
> 2 | assertRejects(async () => await operation());
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {rejects as assertRejects} from 'node:assert';
  2 | assertRejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(13): import {strict as strictAssert} from 'node:assert';\nstrictAssert.rejects(async () => await operation()); 1`] = `

  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(13): import {strict as strictAssert} from 'node:assert';\nstrictAssert.rejects(async () => await operation()); 2`] = `

Message:
  1 | import {strict as strictAssert} from 'node:assert';
> 2 | strictAssert.rejects(async () => await operation());
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {strict as strictAssert} from 'node:assert';
  2 | strictAssert.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(14): import {rejects} from 'node:assert/strict';\nrejects(async () => await operation()); 1`] = `

  1 | import {rejects} from 'node:assert/strict';
  2 | rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(14): import {rejects} from 'node:assert/strict';\nrejects(async () => await operation()); 2`] = `

Message:
  1 | import {rejects} from 'node:assert/strict';
> 2 | rejects(async () => await operation());
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {rejects} from 'node:assert/strict';
  2 | rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(15): import {rejects} from 'assert';\nrejects(async () => await operation()); 1`] = `

  1 | import {rejects} from 'assert';
  2 | rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(15): import {rejects} from 'assert';\nrejects(async () => await operation()); 2`] = `

Message:
  1 | import {rejects} from 'assert';
> 2 | rejects(async () => await operation());
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {rejects} from 'assert';
  2 | rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(16): import assert from 'assert/strict';\nassert.rejects(async () => await operation()); 1`] = `

  1 | import assert from 'assert/strict';
  2 | assert.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(16): import assert from 'assert/strict';\nassert.rejects(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'assert/strict';
> 2 | assert.rejects(async () => await operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'assert/strict';
  2 | assert.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(17): import assert from 'node:assert';\nassert?.rejects(async () => await operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert?.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(17): import assert from 'node:assert';\nassert?.rejects(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert?.rejects(async () => await operation());
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert?.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(18): import assert from 'node:assert';\nassert.rejects?.(async () => await operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects?.(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(18): import assert from 'node:assert';\nassert.rejects?.(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects?.(async () => await operation());
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects?.(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(19): import assert from 'node:assert';\nassert.rejects(async () => await operation()?.result); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await operation()?.result);

`;

exports[`no-unneeded-async-rejects-callback > invalid(19): import assert from 'node:assert';\nassert.rejects(async () => await operation()?.result); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await operation()?.result);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => operation()?.result);

`;

exports[`no-unneeded-async-rejects-callback > invalid(2): import assert from 'node:assert';\nassert.rejects(async () => { await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(2): import assert from 'node:assert';\nassert.rejects(async () => { await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => { return operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(20): import assert from 'node:assert';\nassert.rejects(async () => await (operation())); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await (operation()));

`;

exports[`no-unneeded-async-rejects-callback > invalid(20): import assert from 'node:assert';\nassert.rejects(async () => await (operation())); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await (operation()));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => (operation()));

`;

exports[`no-unneeded-async-rejects-callback > invalid(21): import assert from 'node:assert';\nassert.rejects(async () => await operation().then(value => value)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await operation().then(value => value));

`;

exports[`no-unneeded-async-rejects-callback > invalid(21): import assert from 'node:assert';\nassert.rejects(async () => await operation().then(value => value)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await operation().then(value => value));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => operation().then(value => value));

`;

exports[`no-unneeded-async-rejects-callback > invalid(22): import assert from 'node:assert';\nassert.rejects(async () => await (async () => await operation())()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await (async () => await operation())());

`;

exports[`no-unneeded-async-rejects-callback > invalid(22): import assert from 'node:assert';\nassert.rejects(async () => await (async () => await operation())()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await (async () => await operation())());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => (async () => await operation())());

`;

exports[`no-unneeded-async-rejects-callback > invalid(23): import test from 'node:test';\ntest('test', context => { context.assert.rejects(async () => await operation()); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('test', context => { context.assert.rejects(async () => await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(23): import test from 'node:test';\ntest('test', context => { context.assert.rejects(async () => await operation()); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('test', context => { context.assert.rejects(async () => await operation()); });
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import test from 'node:test';
  2 | test('test', context => { context.assert.rejects(() => operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(24): import test from 'node:test';\ntest.only('test', context => { context.assert.rejects(async () => await operation()); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.only('test', context => { context.assert.rejects(async () => await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(24): import test from 'node:test';\ntest.only('test', context => { context.assert.rejects(async () => await operation()); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.only('test', context => { context.assert.rejects(async () => await operation()); });
    |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import test from 'node:test';
  2 | test.only('test', context => { context.assert.rejects(() => operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(25): import * as nodeTest from 'node:test';\nnodeTest.test('test', context => { context.assert.rejects(async () => await operation()); }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('test', context => { context.assert.rejects(async () => await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(25): import * as nodeTest from 'node:test';\nnodeTest.test('test', context => { context.assert.rejects(async () => await operation()); }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test('test', context => { context.assert.rejects(async () => await operation()); });
    |                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test('test', context => { context.assert.rejects(() => operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(26): import test from 'node:test';\ntest('outer', context => { context.test('inner', nestedContext => { nestedContext.assert.rejects(async () => await operation()); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('outer', context => { context.test('inner', nestedContext => { nestedContext.assert.rejects(async () => await operation()); }); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(26): import test from 'node:test';\ntest('outer', context => { context.test('inner', nestedContext => { nestedContext.assert.rejects(async () => await operation()); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('outer', context => { context.test('inner', nestedContext => { nestedContext.assert.rejects(async () => await operation()); }); });
    |                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import test from 'node:test';
  2 | test('outer', context => { context.test('inner', nestedContext => { nestedContext.assert.rejects(() => operation()); }); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(27): import {beforeEach} from 'node:test';\nbeforeEach(context => { context.assert.rejects(async () => await operation()); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(context => { context.assert.rejects(async () => await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(27): import {beforeEach} from 'node:test';\nbeforeEach(context => { context.assert.rejects(async () => await operation()); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(context => { context.assert.rejects(async () => await operation()); });
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(context => { context.assert.rejects(() => operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(28): import test from 'node:test';\ntest.beforeEach(context => { context.assert.rejects(async () => await operation()); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(context => { context.assert.rejects(async () => await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(28): import test from 'node:test';\ntest.beforeEach(context => { context.assert.rejects(async () => await operation()); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(context => { context.assert.rejects(async () => await operation()); });
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import test from 'node:test';
  2 | test.beforeEach(context => { context.assert.rejects(() => operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(29): import assert from 'node:assert';\nassert.rejects(async /* keep */ () => await operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async /* keep */ () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(29): import assert from 'node:assert';\nassert.rejects(async /* keep */ () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async /* keep */ () => await operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

`;

exports[`no-unneeded-async-rejects-callback > invalid(3): import assert from 'node:assert';\nassert.rejects(async () => { return await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { return await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(3): import assert from 'node:assert';\nassert.rejects(async () => { return await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { return await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => { return operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(30): import assert from 'node:assert';\nassert.rejects(async () => await /* keep */ operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await /* keep */ operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(30): import assert from 'node:assert';\nassert.rejects(async () => await /* keep */ operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await /* keep */ operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

`;

exports[`no-unneeded-async-rejects-callback > invalid(31): import assert from 'node:assert';\nassert.rejects(async () => await operation(/* keep */)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await operation(/* keep */));

`;

exports[`no-unneeded-async-rejects-callback > invalid(31): import assert from 'node:assert';\nassert.rejects(async () => await operation(/* keep */)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await operation(/* keep */));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => operation(/* keep */));

`;

exports[`no-unneeded-async-rejects-callback > invalid(32): import assert from 'node:assert';\nassert.rejects(async () => { await /* keep */ operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { await /* keep */ operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(32): import assert from 'node:assert';\nassert.rejects(async () => { await /* keep */ operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { await /* keep */ operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => { return /* keep */ operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(33): import assert from 'node:assert';\nassert.rejects(async () => { ((await operation())); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { ((await operation())); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(33): import assert from 'node:assert';\nassert.rejects(async () => { ((await operation())); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { ((await operation())); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

`;

exports[`no-unneeded-async-rejects-callback > invalid(34): import assert from 'node:assert';\nassert.rejects(async () => { return (await operation()); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { return (await operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(34): import assert from 'node:assert';\nassert.rejects(async () => { return (await operation()); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { return (await operation()); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => { return (operation()); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(35): import assert from 'node:assert';\nassert.rejects(async () => { return /* keep */ await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => { return /* keep */ await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(35): import assert from 'node:assert';\nassert.rejects(async () => { return /* keep */ await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => { return /* keep */ await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => { return /* keep */ operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(36): import assert from 'node:assert';\nassert.rejects(async () => await (operation() as Promise<void>)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await (operation() as Promise<void>));

`;

exports[`no-unneeded-async-rejects-callback > invalid(36): import assert from 'node:assert';\nassert.rejects(async () => await (operation() as Promise<void>)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await (operation() as Promise<void>));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => (operation() as Promise<void>));

`;

exports[`no-unneeded-async-rejects-callback > invalid(37): import assert from 'node:assert';\nassert.rejects(async () => await operation()!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await operation()!);

`;

exports[`no-unneeded-async-rejects-callback > invalid(37): import assert from 'node:assert';\nassert.rejects(async () => await operation()!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await operation()!);
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => operation()!);

`;

exports[`no-unneeded-async-rejects-callback > invalid(38): import assert from 'node:assert';\nassert.rejects(async () => await (operation() satisfies Promise<void>)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async () => await (operation() satisfies Promise<void>));

`;

exports[`no-unneeded-async-rejects-callback > invalid(38): import assert from 'node:assert';\nassert.rejects(async () => await (operation() satisfies Promise<void>)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async () => await (operation() satisfies Promise<void>));
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(() => (operation() satisfies Promise<void>));

`;

exports[`no-unneeded-async-rejects-callback > invalid(4): import assert from 'node:assert';\nassert.rejects(async function () { await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async function () { await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(4): import assert from 'node:assert';\nassert.rejects(async function () { await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async function () { await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(function () { return operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(5): import assert from 'node:assert';\nassert.rejects(async function () { return await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async function () { return await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(5): import assert from 'node:assert';\nassert.rejects(async function () { return await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async function () { return await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(function () { return operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(6): import assert from 'node:assert';\nassert.rejects(async function operationCallback() { return await operation(); }); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.rejects(async function operationCallback() { return await operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(6): import assert from 'node:assert';\nassert.rejects(async function operationCallback() { return await operation(); }); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.rejects(async function operationCallback() { return await operation(); });
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.rejects(function operationCallback() { return operation(); });

`;

exports[`no-unneeded-async-rejects-callback > invalid(7): import assert from 'node:assert/strict';\nassert.rejects(async () => await operation()); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(7): import assert from 'node:assert/strict';\nassert.rejects(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.rejects(async () => await operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert/strict';
  2 | assert.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(8): import * as assert from 'node:assert';\nassert.rejects(async () => await operation()); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(8): import * as assert from 'node:assert';\nassert.rejects(async () => await operation()); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.rejects(async () => await operation());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import * as assert from 'node:assert';
  2 | assert.rejects(() => operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(9): import assert from 'node:assert';\nassert.strict.rejects(async () => await operation()); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict.rejects(async () => await operation());

`;

exports[`no-unneeded-async-rejects-callback > invalid(9): import assert from 'node:assert';\nassert.strict.rejects(async () => await operation()); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict.rejects(async () => await operation());
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This \`rejects()\` callback may unnecessarily wrap a single awaited operation.

Suggestion 1/1: Replace it with a plain Promise-returning callback.:
  1 | import assert from 'node:assert';
  2 | assert.strict.rejects(() => operation());

`;
